# Multi-Agent-CI-CD-Failure-Triage-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: agent_design.md
fixtures/sample_incidents/incident_001/: ci.yml  incident.json  requirements.txt  test-report.txt
scripts/: create_incident.py  evaluate_fixtures.py  smoke_ollama_workflow.py
src/: __init__.py  main.py
src/agents/: __init__.py  build_test_analyzer_agent.py  coordinator_agent.py  infra_config_analyzer_agent.py  remediation_planner_agent.py
src/graph/: __init__.py  workflow.py
src/llm/: __init__.py  json_output.py  ollama_client.py
src/reporting/: __init__.py  report_exporter.py
src/state/: __init__.py  triage_state.py
src/tools/: __init__.py  artifact_loader.py  build_log_parser.py  ci_config_validator.py  dependency_inspector.py  dockerfile_inspector.py  triage_runner.py
src/tracing/: __init__.py  trace_logger.py
tests/: conftest.py
tests/test_agents/: test_build_test_analyzer_agent.py  test_coordinator_agent.py  test_infra_config_analyzer_agent.py  test_remediation_planner_agent.py
tests/test_tools/: test_artifact_loader.py  test_build_log_parser.py  test_ci_config_validator.py  test_cli.py  test_create_incident.py  test_dependency_inspector.py  test_dockerfile_inspector.py  test_evaluate_fixtures.py  test_llm_json_output.py  test_ollama_client.py  test_report_exporter.py  test_trace_logger.py  test_triage_runner.py  test_workflow.py
traces/smoke/: incident_001.jsonl
(+8 files in other folders)
